@@ -1,5 +1,7 @@
 2010-06-08  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/web/session.rb: sessioin add-on.
+
 	* lib/gluon/application.rb, lib/gluon/builder.rb, lib/gluon/rs.rb:
 	add-on configuration.
 
